--- a/app.json
+++ b/app.json
@@ -22,7 +22,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#FFFFFF",
+        "package": "com.talles/appSaude",
+        "buildNumber": 1
       }
     },
     "web": {
