--- a/app.json
+++ b/app.json
@@ -22,9 +22,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF",
-        "package": "com.talles/appSaude",
-        "buildNumber": 1
+        "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
