--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "appSaude",
-    "slug": "appSaude",
+    "name": "nursingGuide",
+    "slug": "nursingguide",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/nursing_icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/nursing_splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#333652"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,7 +21,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/images/nursing_adaptive_icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
